added endgame; game works/is playable

--- a/final project/ticfractoe.html
+++ b/final project/ticfractoe.html
@@ -1,4 +1,4 @@
-<!-- Copied in part with permission from Alex Reinking -->
+<!-- Based off of tic-tac-toe code by Alex Reinking. Used with permission. -->
 <!DOCTYPE html>
 <html>
 <head>
