--- a/hw3/index.html
+++ b/hw3/index.html
@@ -60,31 +60,31 @@
 			</div>
 
 			<div class="container">
-				<img src="https://scontent-b-lga.xx.fbcdn.net/hphotos-prn2/1237097_572169569506512_1218654566_n.jpg" 
+				<img id="subheadimg" src="https://scontent-b-lga.xx.fbcdn.net/hphotos-prn2/1237097_572169569506512_1218654566_n.jpg" 
 					height="360px" width="628px"><div class="gutter"></div><div class="column">
 						<div class="row">
+							<h4>Breaking!</h4>
 							<div class="pic-col">
 								<img src="http://www.myfacewhen.net/uploads/568-uberhappy.jpg">
 							</div><div class="mini-gutter"></div><div class="mini-col">
-								<h4>Breaking!</h4>
 								<p>This just in: Splash sets a record of 200+ teachers and volunteers for the Spring program. SpongeBob here sure seems happy to hear it!</p>
 							</div>
 						</div>
 						<hr>
 						<div class="row">
+							<h4>Not just for humans?</h4>
 							<div class="pic-col">
 								<img src="http://www.myfacewhen.net/uploads/3302-happy-dog-is-happy.jpg">
 							</div><div class="mini-gutter"></div><div class="mini-col">
-								<h4>Not just for humans?</h4>
 								<p>The dog does not mind this shameless plug. In fact, he wonders if he can come, too. If SpongeBob can, why not this lil' guy?</p>
 							</div>
 						</div>
 						<hr>
 						<div class="row">
+							<h4>This gentleman is happy...</h4>
 							<div class="pic-col">
 								<img src="http://www.myfacewhen.net/uploads/404-happy-black-man.jpg">
 							</div><div class="mini-gutter"></div><div class="mini-col">
-								<h4>This gentleman is happy...</h4>
 								<p>He is happy because he signed up to teach for Splash. And he thinks that it is wonderful. That is why he is happy.</p>
 							</div>
 						</div>
@@ -96,12 +96,16 @@
 				<h2>How to get involved</h2>
 				<p>Posted on: 30 September 2013 &emsp; Posted by: Miles</p>
 				<p>So actually... why haven't you signed up to teach yet? It's a great opportunity to share what you like doing with a group of excited, driven kids. Plus, it's a lot of fun. If you want to sign up, click the link <a href="https://yale.learningu.org/myesp/register">here</a> and follow the instructions under the "Splash" bar on the right.</p>
-
+				<hr>
 			</div>
 			<div class="container">
-				<textarea id="post_input"></textarea><br>
-				<button id="submit_post">Post</button>
-			</div>	
+				<span>Title:</span><input class="input" id="post_title">&emsp;&emsp;
+				<span>Author:</span><input class="input" id="post_author">
+				<br><br>
+				Post:
+				<textarea class="input" id="post_input"></textarea><br>
+				<button id="submit_post">Post</button> <!-- make width 1.5 times alphabet -->
+			</div>
 		</div>
 	</body>
 </html>
