--- a/week_4/index.html
+++ b/week_4/index.html
@@ -9,6 +9,8 @@
 	</head>
 	<body>
 		<button id="speed">Speed</button>
+		<span id="score">Score: </span>
 		<div id="dot"></div>
+		<div id="food"></div>
 	</body>
 </html>
