little fix to help message

--- a/final project/wptictactoe.html
+++ b/final project/wptictactoe.html
@@ -66,8 +66,8 @@
 }
 
 #anywhere {
-    /*display: none;*/
-    font-family: "Zapf-Chancery";
+    display: none;
+    font-family: "Papyrus";
 }
 </style>
 </head>
